...
                                  .caption
                                  ?.copyWith(fontWeight: FontWeight.w400))
                          : Padding(
                              padding: EdgeInsets.symmetric(
                                  vertical: 4, horizontal: 0),
                              child: OnboardingButton(
                                  label: "Continue",
                                  onTap: () {
                                    widget.onVerificationFinished(true);
                                  })),
                      Padding(padding: EdgeInsets.all(6)),
                    ],
                  ),
...
