...
    return AppBar(
      // Get rid of the shadow
      elevation: 0,
      backgroundColor: Colors.transparent,
      leading: Semantics(
        container: true,
        identifier: 'hamburger_menu',
        button: true,
        child: AnimatedOpacity(
          duration: _animationsDuration,
          opacity: (optionsShown || inEditMode) ? 0.0 : 1.0,
          child: HamburgerMenu(
            iconState: state,
...
